prepare release 2025r3